--- a/newstule.css
+++ b/newstule.css
@@ -79,7 +79,7 @@ h4 {
 }
 
 /* Features section */
-.features-container {
+/*.features-container {
   background-color: white;
   padding-top: 120px;
   margin-top: -80px;
@@ -111,7 +111,26 @@ h4 {
   height: 160px;
   margin: 24px auto 42px 86px;
   width: 400px;
+}*/
+
+.features-container {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  background: #fff;
+  padding: 40px;
 }
+
+.feature-left {
+  flex: 50%;
+  padding: 20px 0;
+}
+
+.feature-right {
+  flex: 50%;
+  padding: 20px 0;
+}
+
 /* End features section */
 
                                 /* 3rd section  */
@@ -253,6 +272,10 @@ footer {
    font-size: 18px;
   }
 
+  .feature-left, .feature-right {
+    flex: 100%;
+  }
+
 }
 
 /* Small phones to small tablets */
@@ -297,6 +320,10 @@ footer {
 
   .texts-container {
     margin: 0 15px 0 15px ;
+  }
+
+  .feature-left, .feature-right {
+    flex: 100%;
   }
 
 }
