--- a/style.css
+++ b/style.css
@@ -1,230 +1,240 @@
-@import url('https://fonts.googleapis.com/css2?family=Spinnaker&display=swap');
-
 * {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
 }
 
 body {
+  overflow-x: auto;
+  overflow-y: scroll;
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
+h1 {
+  font-size: 4rem;
+  font-weight: 300;
+  margin-top: 4rem;
+}
+
+@media screen and (max-width: 630px) {
+  h1 {
+    font-size: 3rem;
+  }
+}
+
+h3 {
+  color: #340f54;
+  text-align: center;
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
+
+h4 {
+  color: #340f54;
+  margin-bottom: 12px;
+  font-weight: 400;
+}
+
+p {
+  color: #3d3d3d;
+  font-size: 1.2rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 2rem;
+  text-align: center;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+.fluid-container {
+  background: white;
+}
+
+main {
   background: linear-gradient(
       rgba(255, 255, 255, 0.5),
       rgba(255, 255, 255, 0.5)
     ),
     url(./assets/images/backgorund-image.jpg);
-  overflow-x: auto;
-  overflow-y: scroll;
-  height: 100%;
-  scroll-behavior: smooth;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  background-position: center;
 }
 
-#first-section {
-  height: 560px;
-  padding: 5% 0;
+.hero {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.presentation {
-  position: relative;
-  top: 18%;
-  left: 12%;
-  width: 500px;
+@media screen and (max-width: 781px) {
+  .hero {
+    text-align: center;
+  }
 }
 
-.presentation h4 {
-  font-size: 60px;
-  font-family: roboto-thin, roboto, sans-serif;
+.hero-left {
+  max-width: 30rem;
 }
 
-.presentation .elli-word {
-  font-weight: bold;
-  letter-spacing: 0em;
-}
-.presentation .is-word {
-  letter-spacing: 0em;
+.hero-left > p {
+  font-size: 1.5rem;
+  color: #6e6e67;
 }
 
-h4 {
-  font: normal normal normal 45px/1.4em Spinnaker, sans-serif;
-  font-size: 50px;
-  line-height: 0.8;
+.app-preview {
+  margin-top: 8rem;
+  margin-bottom: -4rem;
 }
 
-.font-h4 {
-  color: #060605;
-}
-
-.presentation h6 {
-  font-family: roboto-thin, roboto, sans-serif;
-  font-size: 24px;
+.hero-left h1 span {
+  font-family: "Roboto";
+  font-weight: 500;
+  letter-spacing: 0;
 }
 
 .learn-more-button {
-  position: relative;
-  top: 42%;
-  left: 18%;
-  width: 404px;
-  height: 40px;
-  border: none;
+  display: block;
+  width: 20rem;
   background: #330d54;
-  text-align: center;
-}
-.learn-more-button a {
-  font-size: 25px;
   color: white;
+  text-align: center;
   text-decoration: none;
+  margin: 0 auto;
+  border: none;
+  padding: 0.6rem 2rem;
 }
 
-.phone-icon {
-  position: absolute;
-  left: 58%;
-  top: 15%;
-}
-
-#second-section {
-  background: white;
-  height: 650px;
-}
-
-#second-section .first-row {
-  padding-top: 100px;
-}
-
-#second-section .second-row {
-  padding-top: 100px;
-}
-
-.heart-icon {
-  position: relative;
-  height: 77px;
-  width: 77px;
-  margin-bottom: 10px;
-  border: 1px solid blue;
-  text-align: center;
-  background: #330d54;
-}
-
-.feature-box {
-  text-align: center;
-}
-
-.feature-box p {
-  color: #330d54;
-}
-
-.heart-icon i {
+.learn-more-button::after {
+  display: inline-block;
+  content: "›";
   color: white;
-  position: absolute;
-  top: 20%;
-  left: 20%;
-  font-size: 3rem;
+  transform: rotate(90deg);
+  margin-left: 1rem;
 }
 
-#third-section {
-  height: 400px;
+.features {
+  padding-top: 4rem;
 }
 
-.subscribtion {
-  position: relative;
-  top: 45%;
-  left: 13%;
-  width: 1050px;
+.feature {
+  width: 50%;
+  padding: 1rem;
 }
 
-.subscribtion .col {
-  height: 51px;
-  padding-left: 0;
+@media screen and (max-width: 630px) {
+  .feature {
+    width: 100%;
+  }
 }
 
-.subscribtion .col input {
-  height: 100%;
-  padding-left: 24px;
-  border-width: 1px;
-  background-color: rgba(255, 255, 255, 0.5);
-  border-color: transparent;
-  border-style: solid;
-  text-align: left;
-  border-radius: 0;
+.feature > img {
+  height: 5rem;
+  padding: 0.6rem;
+}
+
+.subscription {
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.subscription > h5 {
+  font-size: 1.5rem;
+  text-align: center;
+  font-family: roboto-thin, roboto, sans-serif;
+  letter-spacing: normal;
+  font-weight: 700;
+  line-height: 0.8;
+  margin-bottom: 5rem;
+}
+
+@media screen and (max-width: 630px) {
+  .subscription > h5 {
+    font-size: 20px;
+    line-height: 0.8;
+    box-sizing: border-box;
+    font-weight: 500;
+  }
+}
+
+.subscription > form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.subscription > form > input,
+.subscription > form > button {
+  padding: 1rem;
+  margin: 0 1rem 1rem 1rem;
   color: #2b2b24;
+  background-color: rgba(255, 255, 255, 0.5);
   font-size: 16px;
   font-weight: 200;
+  border: none;
 }
 
-.subscribtion .col input:hover {
-  background-color: white;
+@media screen and (max-width: 630px) {
+  .subscription > form > input,
+  .subscription > form > button {
+    width: 75%;
+  }
 }
 
-.subscribtion .col input:focus {
-  background-color: white;
+@media screen and (min-width: 631px) and (max-width: 1023px) {
+  .subscription > form > input,
+  .subscription > form > button {
+    width: 50%;
+  }
 }
 
-.subscribtion button {
-  height: 100%;
-  padding-left: 70px;
-  padding-right: 70px;
+.subscription > form > button {
+  color: white;
+  background-color: rgba(55, 59, 77, 0.7);
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
-.subscribtion button:hover {
+.subscription > form > button:hover {
+  color: white;
   background-color: black;
 }
 
-#fourth-section {
-  background: white;
-  height: 600px;
+.member {
+  min-width: 16rem;
 }
 
-.team-images {
-  margin-top: 51px;
-  text-align: center;
+.member img {
+  border-radius: 50%;
+  padding: 0.6rem;
+  width: 9rem;
 }
 
-.team-presentation {
-  text-align: center;
-  padding: 0 50px 0 50px;
-}
-
-.team-presentation .title {
-  text-align: center;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: normal;
-  letter-spacing: normal;
-}
-
-.team-presentation .first-paragraph {
-  margin: 16px 0 20px 0;
-}
-
-.team-presentation .second-paragraph {
-  margin: 16px 0 16px 0;
-}
-
-.footer {
-  margin-top: 40px;
-  height: 90px;
+footer {
+  display: flex;
+  justify-content: center;
   background: rgba(51, 13, 84, 1);
 }
 
-.footer .container {
-  text-align: center;
-}
-
-.facebook-icon {
-  margin-right: 50px;
-  margin-top: 10px;
-}
-
-.LinkedIn-icon {
-  margin-right: 20px;
-  margin-top: 10px;
-}
-
-.color-1 {
-  color: #2b2b24;
-}
-
-.color-2 {
-  color: #6e6e67;
+footer > a {
+  padding: 1rem;
 }
