--- a/eoi/style.css
+++ b/eoi/style.css
@@ -1,146 +1,79 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    font-size: 18px;
-    font-family: 'Open Sans', sans-serif;
+	margin: 0;
+	padding: 0;
+	font-size: 18px;
+	font-family: 'Open Sans', sans-serif;
 }
 
 :root {
-    --elli-color : rgba(51, 13, 84, 1);
+  --elli-color : rgba(51, 13, 84, 1);
 }
 
 body {
-    background: linear-gradient(
-        rgba(255, 255, 255, 0.5),
-        rgba(255, 255, 255, 0.5)
-      ),
-      url(./assets/backgorund-image.jpg);
-      background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center;
-      
+	background: linear-gradient(
+	    rgba(255, 255, 255, 0.5),
+	  rgba(255, 255, 255, 0.5)
+	),
+	url(./assets/backgorund-image.jpg);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	background-position: center; 
+}
+
+h1 {
+  color: var(--elli-color);
+  text-align: center;
+  font-size: 1.3rem;
+  text-decoration: underline;
+}
+
+input[type="text"] {
+  border: 0 ;
+  border-bottom: 1px solid var(--elli-color);
+  background: transparent;
+  margin-top: 1rem;
 }
 
 .main-container {
-    max-width: 67em;
-    margin: auto;
-    border: 1px solid green;
+    margin: 5% auto; 
+    max-width: 67em;     
     background: rgba(255, 255, 255, 0.49);
 }
 
-.the-form > h1 {
-    text-align: center;
-    color: var(--elli-color);
+.main-container > form {
+  padding: 3rem 7rem ;
 }
 
-.c-input {
-    background: rgb(242, 243, 247);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 5px;
-    border-radius: 12px;
-    position: relative;
-    width: 240px;
+.credentials {
+  display: flex;
+  margin: 1.5rem 0 ;
+  flex-wrap: wrap;
 }
 
-.c-input input {
-    border: 0;
-    background: transparent;
-    outline: none;
-    font-size: .9rem;
-    margin-left: 8px;
-    width: 200px;
-    transition: all .25s ease ;
-
+.credentials input{
+  flex-basis: 30%;
+  padding: 1rem;
 }
 
-.c-input i.icon {
-    order: -1;
-    background: #fff ;
-    border-radius: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 31px;
-    height: 31px;
-    z-index: 20;
-    transition: all .25s ease;
-    color: var(--elli-color);
+.credentials > input:nth-child(1){
+  margin-right: 3.5rem ;
 }
 
-.c-input input:focus {
-    padding-left: 5px;
-    padding-right: 0;
+.credentials > input:nth-child(3) {
+  flex-basis: 70%;
 }
 
-
-.c-input input:focus ~.bg {
-    border: 2px solid var(--elli-color) ;
+.questions {
+	display: flex;
+	flex-wrap: wrap;
+  margin: 3rem 0;
+  justify-content: space-between;
 }
 
-.c-input input:focus ~ i {
-    transform: translate(0,-8px);
-    box-shadow: 0 8px 20px 0  rgba(0,0,0, .15);
+.questions div {
+	display: flex;
+	flex-direction: column;
 }
-
-
-.bg {
-    background: transparent;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    pointer-events: none;
-    border-radius: inherit;
-    box-sizing: border-box;
-    border: 2px solid transparent ;
-    transition: all .25s ease ;
-}
-
-label {
-    display: inline;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
