--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   scroll-behavior: smooth;
   font-family: "Roboto", sans-serif;
-  font-weight: 300;
+  font-weight: 100;
   box-sizing: border-box;
 }
 
@@ -90,12 +90,12 @@ main {
 }
 
 .hero-left {
-  max-width: 30rem;
+  max-width: 32rem;
 }
 
-.hero-left > h1 > div {
+/* .hero-left > h1 > div {
   font-size: 3rem
-}
+} */
 
 .hero-left > p {
   font-size: 1.5rem;
@@ -109,8 +109,16 @@ main {
 
 .hero-left h1 span {
   font-family: "Roboto";
-  font-weight: 500;
+  font-weight: 400;
   letter-spacing: 0;
+}
+
+.hero-left > h1 > div {
+  font-weight: 300;
+}
+
+.hero-left > p {
+  font-weight: 100;
 }
 
 .learn-more-button {
