--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ p {
   margin-bottom: 1rem;
 }
 
+img {
+  max-width: 90%;
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -83,7 +87,7 @@ main {
   align-items: center;
 }
 
-@media screen and (max-width: 781px) {
+@media screen and (max-width: 1007px) {
   .hero {
     text-align: center;
   }
@@ -105,6 +109,7 @@ main {
 .app-preview {
   margin-top: 8rem;
   margin-bottom: -4rem;
+  text-align: center;
 }
 
 .hero-left h1 span {
