--- a/style.css
+++ b/style.css
@@ -3,23 +3,19 @@
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  scroll-behavior: smooth;
-  font-family: "Roboto", sans-serif;
-  font-weight: 100;
-  color: rgb(43, 43, 36);
   box-sizing: border-box;
 }
 
 html {
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
+  font-weight: 100;
+  color: rgb(43, 43, 36);
 }
 
 body {
-  overflow-x: auto;
-  overflow-y: scroll;
-  height: 100%;
+  margin: 0;
+  padding: 0;
   scroll-behavior: smooth;
 }
 
@@ -78,10 +74,40 @@ img {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 2rem;
+  align-items: center;
   text-align: center;
-  max-width: 1400px;
   margin: 0 auto;
+  padding: 2rem;
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1320px;
+  }
 }
 
 .fluid-container {
@@ -169,12 +195,6 @@ img {
   align-items: center;
 }
 
-.subscription > form {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
 .subscription > form > input,
 .subscription > form > button {
   padding: 1rem;
@@ -186,14 +206,14 @@ img {
   border: none;
 }
 
-@media screen and (max-width: 630px) {
+@media screen and (max-width: 991px) {
   .subscription > form > input,
   .subscription > form > button {
     width: 75%;
   }
 }
 
-@media screen and (min-width: 631px) and (max-width: 1023px) {
+@media screen and (min-width: 992px) and (max-width: 1200px) {
   .subscription > form > input,
   .subscription > form > button {
     width: 50%;
@@ -220,12 +240,6 @@ img {
   border-radius: 50%;
   padding: 0.6rem;
   width: 9rem;
-}
-
-@media screen and (min-width: 1023px) {
-  .texts {
-    padding: 2rem 12rem;
-  }
 }
 
 footer {
